@@ -270,9 +270,9 @@ peak.tests.MailModel  = importString('peak.storage.tests:xmi')
 
 [peak.running]
 
-# peak.running.signalManager is used while the standard MainLoop runs
-signalManager =
-    importString('peak.running.scheduler:DefaultSignalManager')(targetObj)
+# peak.running.mainLoop.signalHandler is used while the standard MainLoop runs
+mainLoop.signalHandler =
+    importString('peak.running.scheduler:StopOnStandardSignals')(targetObj)
 
 # This setting only affects the 'UntwistedReactor'
 reactor.checkInterval = 3600    # if no scheduled tasks, do 1 select/hour
